# solafune

construction-cost-prediction/: Makefile  pyproject.toml
construction-cost-prediction/.devcontainer/: Dockerfile  devcontainer.json
construction-cost-prediction/conf/: parameter_case002.yml  parameter_initial_tabular_only.yml
construction-cost-prediction/docs/: satellite_feature_plan.md
construction-cost-prediction/docs/prompts/: make_intial_model.md  satellite_usage_plan.md
construction-cost-prediction/notebooks/: add-bands.ipynb  case002.ipynb  create-add-features.ipynb  eda.ipynb  initial_model.ipynb
construction-cost-prediction/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
construction-cost-prediction/notebooks/catboost_info/test/: events.out.tfevents
construction-cost-prediction/src/: io.py  training.py
notebooks/catboost_info/: test_error.tsv
notebooks/catboost_info/learn/: events.out.tfevents
precipitation-nowcast/: .gitignore  Makefile  main.py  pyproject.toml  run-phase2.sh  run-phase2_calibrate.sh  run-phase2_ensemble.sh  run-phase2_hp.sh  run-phase2_patch.sh  run-phase2_scenenorm.sh  run-phase2_temporal.sh  run-phase3.sh
precipitation-nowcast/.claude/: CLAUDE.md
precipitation-nowcast/.devcontainer/: devcontainer.json
precipitation-nowcast/conf/: config.yaml  folds.yaml
precipitation-nowcast/docs/: STATUS.md
precipitation-nowcast/docs/dataset/: data-specification.md
precipitation-nowcast/docs/discussion/: 0708-lh24-summary.md
precipitation-nowcast/docs/eda/: README.md
precipitation-nowcast/docs/eda/figures/: band_relationship_stats.json
precipitation-nowcast/docs/eda/sections/: 10_target_distribution.md  20_stratification.md  30_grid_and_cv.md  40_input_bands.md  45_band_target_relationship.md  50_baselines.md
precipitation-nowcast/docs/phase1/: RUNBOOK.md
precipitation-nowcast/docs/phase1/sections/: 10_fit_and_cv.md  20_implementation.md
precipitation-nowcast/docs/phase2/: RUNBOOK.md
precipitation-nowcast/docs/survey/: 01_input-features.md  02_estimation-methods.md  03_strategy.md  README.md
precipitation-nowcast/kaggle/: train_unet_kaggle.py  train_unet_kaggle_v2.py
precipitation-nowcast/scratch/: ensemble_submissions.py  exp2_ablation.py  gbdt_fold0_eval.py  hp_search.py  hp_search2.py  scatter_band_target.py  scene_ablation.py  scene_ablation_light.py  validate_submission.py
precipitation-nowcast/src/: build_kaggle_dataset.py  build_phase1_suffstats.py  predict.py  preprocess_test.py  preprocess_train.py  train.py
precipitation-nowcast/src/precip/: __init__.py  calibrate.py  cnn.py  config.py  cv.py  dataio.py  ensemble.py  features.py  gbdt.py  metrics.py  phase1_fit.py  phase1_suffstats.py  physical.py
src/: config.py  features.py
